--- a/app/src/main/res/layout/android_comm_lib_logcat.xml
+++ b/app/src/main/res/layout/android_comm_lib_logcat.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     XXX how to fill_parent?
-	bysong
--->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
     <include
+        android:id="@+id/android_comm_lib_logcat_contralbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/android_comm_lib_logcat_controlbar" />
