--- a/app/src/main/res/layout/task_item_container.xml
+++ b/app/src/main/res/layout/task_item_container.xml
@@ -7,9 +7,10 @@
     android:clickable="true"
     tools:context=".TaskCollectionFragment">
 
+    <include layout="@layout/debug_info" />
+
     <TextView
         android:id="@+id/name"
-        android:text="name" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:text="name" android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
