--- a/app/src/main/res/values/android_comm_lib_web_colors.xml
+++ b/app/src/main/res/values/android_comm_lib_web_colors.xml
@@ -12,6 +12,7 @@
     <color name="android_comm_lib_silver">#C0C0C0</color>
     <color name="android_comm_lib_maroon">#800000</color>
     <color name="android_comm_lib_olive">#808000</color>
+    <!-- gray -->
     <color name="android_comm_lib_gray">#808080</color>
     <color name="android_comm_lib_lime">#00FF00</color>
     <color name="android_comm_lib_qua">#00FFFF</color>
