--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:hint="name" />
+            android:hint="单击输入标题" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,6 +41,7 @@
         </LinearLayout>
 
         <ToggleButton
+            android:visibility="gone"
             android:id="@+id/start_now"
             android:textOn="auto start"
             android:textOff="not auto start"
@@ -48,6 +49,25 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/start_now" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="完成"
+                android:id="@+id/button_ok" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="取消"
+                android:id="@+id/button_cance" />
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
