--- a/app/src/main/res/layout/fragment_task_collection.xml
+++ b/app/src/main/res/layout/fragment_task_collection.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="com.bombtime.bombtime.AddTaskFragment">
 
-    <view class="android.support.v7.widget.RecyclerView"
-        android:id="@+id/task_collection"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--<view class="android.support.v7.widget.RecyclerView"-->
+        <!--android:id="@+id/task_collection"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 </FrameLayout>
