--- a/app/src/main/res/layout/task_item_container.xml
+++ b/app/src/main/res/layout/task_item_container.xml
@@ -4,7 +4,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:clickable="true"
     tools:context=".TaskCollectionFragment">
 
     <include layout="@layout/debug_info" />
@@ -12,5 +11,5 @@
     <TextView
         android:id="@+id/name"
         android:text="name" android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="80dp" />
 </RelativeLayout>
